--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1194,7 +1194,17 @@ go.to.class.dumb.mode.message=Go To Class action is not available until indices 
 edit.custom.settings.confirm=File \n''{0}''\n does not exist. Create?
 warning.load.project.from.share=You are opening a project from a network share. Do you trust this location?\n{0}
 title.load.project.from.share=Loading Project From Network
+title.load.local.project=Loading Project
+warning.load.local.project=You are about to open a project. Do you trust this location?\n{0}
 warning.load.file.from.share=You are opening a file from a network share. Do you want to continue?\n{0}
 title.load.file.from.share=Loading File From Network
+
+activation.auth.title=Unauthorized Operation
+activation.auth.message=The command line launcher is outdated. Please refresh it (via Tools | Create Command-line Launcher).
+warning.load.local.file=You are about to open file. Do you want to continue?\n{0}
+title.load.local.file=Loading File
+
+warning.use.rest.api=''{0}'' API is requested. Do you trust ''{1}''?
+title.use.rest.api=Using REST API
 
 change.color.command.text=Change color
